sign-in and up finished

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,14 @@ DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_NAME=
+
+// USERS 
+DEFAULT_ADMIN_PASSWORD=
+DEFAULT_USER_PASSWORD=
+
+//AUTH -- LO SACO DE AQUI 256 BIT KEY -- https://keygen.io/#fakeLink 
+AUTH_JWT_SECRET= 
+
+//APIS KEYS --- me permite definir cuando haya algun login ya sea admin u otro le otorgue sus permisos
+PUBLIC_API_KEY_TOKEN=
+ADMIN_API_KEY_TOKEN=
