--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   "dependencies": {
     "@hapi/boom": "^9.1.4",
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^4.1.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.1",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "chalk": "^4.1.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
